# crypto-data-platform

./: .gitignore  README.md  pyproject.toml
crypto-frontend/: package-lock.json  package.json
crypto-frontend/app/: layout.tsx  page.tsx
crypto-frontend/components/: CoinsTable.tsx
crypto_dbt/models/analytics/: dim_coins.sql  dim_coins.yml  fact_market_data.sql  fact_market_data.yml  price_history.sql  price_history.yml
crypto_dbt/models/staging/: sources.yml  stg_top_coins.sql  stg_top_coins.yml
crypto_dbt/snapshots/: top_coins_snapshot.sql
dbt/: dbt_project.yml
flows/: ingest_and_transform.py
ingestion/: ingest_top_coins.py
src/: main.py
src/crypto_data_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/db/: connection.py
src/ingestion/: get_top_coins.py  save_top_coins.py
